Fix the word wrap of descriptions and display remove project btn only when in project tab

--- a/src/sass/_todos.scss
+++ b/src/sass/_todos.scss
@@ -77,7 +77,7 @@
   &__description {
     animation: animate-description .1s linear;
     max-width: 29rem;
-    word-break: break-all;
+    word-wrap: break-word;
 
   }
 }
